--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Wordle Score Sharer</title>
     <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json" />
 </head>
 
 <body>
