try read clipboard

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Share Your Wordle Score</h1>
     <textarea id="score-input" placeholder="Paste your Wordle score here"></textarea>
     <button id="submit-score">Submit Score</button>
-
+    <button id="check-for-score">Check For Score</button>
     <div id="result"></div>
 
     <script src="app.js"></script>
