--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <h1>Share Your Wordle Score</h1>
+    <p id="date-display"></p>
     <textarea id="score-input" placeholder="Paste your Wordle score here"></textarea>
     <button id="submit-score">Submit Score</button>
-    <button id="check-for-score">Check For Score</button>
     <div id="result"></div>
 
     <script src="app.js"></script>
