changed date to timestamp added get data btn

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <p id="verification-blocker-text">verify email to view</p>
             <button id="check-verification-button">check verification</button>
             <button id="resend-verification-button">resend verification</button>
+            <button id="get-user-doc-button">print Data</button>
             <p id="check-verification-output"></p>
         </div>
     </div>
